refactor: 코드 최적화